--- a/app.html
+++ b/app.html
@@ -285,7 +285,10 @@ pre {
 }
 #popup button {
     padding: 10px 20px;
-    margin: 0 25px;
+    margin: 0;
+}
+#popup button:first-of-type {
+    margin-right: 30px;
 }
 /* Success Modal Styles */
 #success-modal {
