--- a/app.html
+++ b/app.html
@@ -409,6 +409,23 @@ pre {
     .card {
         width: 100%;
     }
+  #popup {
+    display: flex !important;          /* Flex layout for buttons */
+    flex-direction: column !important; /* Stack items vertically */
+    align-items: center !important;    /* Center content horizontally */
+    gap: 10px !important;              /* Space between buttons and message */
+}
+
+#popup p {
+    margin-bottom: 10px !important;    /* Space below message */
+    text-align: center !important;     /* Center the message */
+}
+
+#popup button {
+    padding: 8px 16px !important;      /* Button padding */
+    border-radius: 5px !important;     /* Rounded corners */
+    cursor: pointer !important;        /* Pointer on hover */
+}
 }
 </style>
 </head>
