--- a/app.html
+++ b/app.html
@@ -442,7 +442,7 @@ pre {
 <div id="overlay"></div>
 <div id="popup">
     <p id="popup-message" data-i18n="popup_message"></p>
-    <!-- <button onclick="goToSubscriptions()" data-i18n="subscribe_now">Subscribe Now</button> -->
+    <button onclick="goToSubscriptions()" data-i18n="subscribe_now">Subscribe Now</button>
     <button onclick="closePopup()" data-i18n="close">Close</button>
 </div>
 <!-- Success Modal -->
