--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@ footer {
  position: fixed;
  bottom: 20px;
  right: 20px;
- z-index: 99999;
+ z-index: 10000 !important;
 }
 
 .language-icon {
@@ -683,7 +683,7 @@ footer {
  border-radius: var(--border-radius);
  box-shadow: var(--box-shadow);
  min-width: 150px;
- z-index: 2001;
+ z-index: 10001 !important;
 }
 
 .language-menu button {
