--- a/app.html
+++ b/app.html
@@ -368,7 +368,7 @@ pre {
     position: fixed;
     bottom: 20px;
     right: 20px;
-    z-index: 2000;
+    z-index: 10000 !important;
 }
 .language-icon {
     background: var(--primary);
@@ -397,7 +397,7 @@ pre {
     border-radius: var(--border-radius);
     box-shadow: var(--box-shadow);
     min-width: 150px;
-    z-index: 2001;
+    z-index: 10001 !important;
 }
 .language-menu button {
     display: block;
