--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@ footer {
     <a href="#pricing" data-i18n="nav_pricing">Pricing</a>
     <a href="#faq" data-i18n="nav_faq">FAQ</a>
    </div>
-   <div class="footer-section">
+   <!-- <div class="footer-section">
     <h3 data-i18n="footer_company">Company</h3>
     <p style="color: rgba(255, 255, 255, 0.7);">About Us</p>
     <p style="color: rgba(255, 255, 255, 0.7);">Blog</p>
@@ -921,10 +921,10 @@ footer {
     <h3 data-i18n="footer_legal">Legal</h3>
     <p style="color: rgba(255, 255, 255, 0.7);">Privacy Policy</p>
     <p style="color: rgba(255, 255, 255, 0.7);">Terms of Service</p>
-   </div>
+   </div> -->
   </div>
   <div class="footer-bottom">
-   <p data-i18n="footer_copyright">&copy; 2023 SQL Nurse. All rights reserved.</p>
+   <p data-i18n="footer_copyright">&copy; 2025 SQL Nurse. All rights reserved.</p>
   </div>
  </footer>
 
