--- a/index.html
+++ b/index.html
@@ -924,7 +924,7 @@ footer {
    </div> -->
   </div>
   <div class="footer-bottom">
-   <p data-i18n="footer_copyright">&copy; 2025 SQL Nurse. All rights reserved.</p>
+   <p data-i18n="footer_copyright">2025 SQL Nurse. All rights reserved.</p>
   </div>
  </footer>
 
