--- a/index.html
+++ b/index.html
@@ -1065,7 +1065,7 @@ const translations = {
         footer_contact: "Contact",
         footer_privacy: "Privacy Policy",
         footer_terms: "Terms of Service",
-        footer_copyright: "&copy; 2023 SQL Nurse. All rights reserved.",
+        footer_copyright: "2025 SQL Nurse. All rights reserved.",
         auth_title: "Welcome to SQL Nurse",
         auth_login: "Login",
         auth_signup: "Login/Sign Up",
